CREATE TABLE insured_person (
        id integer generated by default as identity,
        first_name varchar(255)  NOT NULL,
        premium numeric(38,2)  NOT NULL,
        second_name varchar(255)  NOT NULL,
        primary key (id)
    );

CREATE TABLE policy (
        id integer generated by default as identity,
        created_at bigint NOT NULL,
        external_id varchar(255)  NOT NULL,
        start_date date  NOT NULL,
        primary key (id)
 );

CREATE index idx_on_policy_for_external_id_and_start_date on policy (external_id, start_date);


 CREATE TABLE policy_insured_person (
        policy_internal_id integer NOT NULL,
        person_id integer NOT NULL
    );

ALTER TABLE policy_insured_person
       add constraint foreign_key_policy_person_person_id
       foreign key (person_id)
       references insured_person;


ALTER TABLE policy_insured_person
       add constraint foreign_key_policy_insured_person_policy_internal_id
       foreign key (policy_internal_id)
       references policy;
